<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">BT;DT</string>
    <string name="action_settings">Settings</string>

    <!-- Main activity -->
    <string name="am_title">Been There ; Done That</string>
    <string name="cinema_seats_warning">
        This feature is currently available only in Israel! More locations will be added in the next versions.
    </string>
    <string name="cinema_seats_exist_error">
        A category Cinema Seats is already exist. You can not create more than 1 Cinema Seats category.
    </string>
    <string name="cc_category_title_sample">Category Name</string>
    <string name="nfcc_title_sample">NEW FEATURE NAME</string>
    <string name="nfcc_coming_soon">\nCOMING SOON</string>
    <string name="nfcc_tv_days_unit">DAYS</string>
    <string name="nfcc_tv_hours_unit">HRS</string>
    <string name="nfcc_tv_minutes_unit">MINS</string>
    <string name="nfcc_tv_seconds_unit">SECS</string>

    <!-- Cinema -->
    <string name="ic_add_seat">Add Seat</string>
    <string name="ic_delete">Delete</string>
    <string name="ic_tvcn_sample">Cinema City</string>
    <string name="ic_tvcc_sample">Rishon Lezion</string>

    <!-- Recipes -->
    <string name="dnc_tv_nr_title">Create New Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="method">Method</string>
    <string name="bullet">• </string>


    <!-- Menus -->
    <string name="select_category_color">Select your color:</string>
    <string name="menu_category_rename">Rename</string>
    <string name="menu_category_choose_color">Choose Color</string>
    <string name="menu_category_delete">Delete</string>
    <string name="category_deleted">Category deleted</string>

    <!-- Dialog New Category -->
    <string name="category_type_prompt">Choose category type</string>
    <string name="dnc_tv_nc_title">Create New Category</string>
    <string name="dnc_et_hint">Name</string>
    <string name="dnc_btn">Save</string>
    <string name="name_empty_error">Name can not be empty</string>
    <string name="name_exist_error">This name already exists</string>
    <string name="category_renamed">Category renamed</string>

    <string-array name="category_types">
        <item>Note</item>
        <!--<item>Recipes</item>-->
        <item>Cinema Seats</item>
        <item>Travel</item>
    </string-array>

    <!-- Dialogs General -->
    <string name="dialog_title_sample">Title</string>
    <string name="dialog_message_sample">Here comes the text</string>
    <string name="dialog_neutral_button">Okay</string>
    <string name="dialog_save_button">Save</string>
    <string name="dialog_category_name">Name</string>

    <!-- Dialog Rename Category -->
    <string name="drc_tv_rc_title">Rename Category</string>
    <string name="drc_btn">Save</string>

    <!-- Dialog Add Cinema -->
    <string name="dac_title">Add Cinema</string>
    <string name="dac_save">SAVE</string>
    <string-array name="israel_cinemas_name">
        <item>Cinema City</item>
        <item>Hot Cinema</item>
        <item>Yes Planet</item>
    </string-array>

    <string-array name="cinema_city_cities">
        <item>Jerusalem</item>
        <item>Kfar Saba</item>
        <item>Netanya</item>
        <item>Ramat HaSharon - Glilot</item>
        <item>Rishon LeZion</item>
    </string-array>

    <string-array name="hot_cinema_cities">
        <item>Ashdod</item>
        <item>Ashkelon</item>
        <item>Beer Sheva</item>
        <item>Haifa</item>
        <item>Kiryon</item>
        <item>Karmiel</item>
        <item>Kfar Saba</item>
        <item>Modiin-Maccabim-Reut</item>
        <item>Nahariya</item>
        <item>Petah Tikva</item>
        <item>Rehovot</item>
    </string-array>

    <string-array name="yes_planet_cities">
        <item>Beer Sheva</item>
        <item>Haifa</item>
        <item>Jerusalem</item>
        <item>Ramat Gan - Ayalon</item>
        <item>Rishon LeZion</item>
        <item>Zikhron Yaakov</item>
    </string-array>

    <!-- Dialog Add/Edit Hall -->
    <string name="dch_title_add">Add Hall</string>
    <string name="dch_title_edit">Edit Hall</string>
    <string name="ic_hall">Hall:&#160;</string>
    <string name="ic_row">Row:&#160;</string>
    <string name="cinema_hall_empty_error">Hall can not be empty</string>
    <string name="cinema_hall_row_empty_error">"Row can\'t be empty"</string>
    <string name="dch_ethn_hint">Hall</string>
    <string name="dch_etrn_hint">Row</string>

    <!-- Dialog Select Color -->
    <string name="dsc_title_select_color">Select your color:</string>

    <!-- Travel -->
    <string name="title_activity_travel">Travel</string>
    <string name="tab_travel_list">TRAVEL LIST</string>
    <string name="tab_countries">COUNTRIES</string>
    <string name="tab_map">MAP</string>
    <string name="atc_tvcn">Germany</string>
    <string name="atc_tv_overview">Overview</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_travel_country">TravelCountryActivity</string>
    <string name="area_size_proportion">%1$s km\u00B2</string>
    <string name="calling_code">+%1$s</string>
    <string name="country_codes">%1$s, %2$s</string>
    <string name="added_to_travel_list">Congrats! You just added %1$s to your travel list.</string>
    <string name="already_added_to_travel_list">You already plan to visit %1$s</string>
    <string name="default_vacation_image">https://pixabay.com/get/e83cb80c2ff4053ed1584d05fb1d4797ea72e2dc1eb80c4090f5c47ea7ebb3bdd9_640.jpg</string>

    <string name="menu_travel_map_search">Search</string>
    <string name="atc_tv_when_to_travel">When to travel</string>
    <string name="co_tv_native_name">Native Name:&#160;&#160;</string>
    <string name="co_tv_native_name_value">Deutschland</string>
    <string name="co_tv_capital_city">Capital City:&#160;&#160;</string>
    <string name="co_tv_capital_city_name">Berlin</string>
    <string name="co_tv_language">Language:&#160;&#160;</string>
    <string name="co_tv_language_name">German</string>
    <string name="co_tv_native_language">Native Language Name:&#160;&#160;</string>
    <string name="co_tv_native_language_name">Deutsch</string>
    <string name="co_tv_region">Region:&#160;&#160;</string>
    <string name="co_tv_region_name">Europe</string>
    <string name="co_tv_area">Area:&#160;&#160;</string>
    <string name="co_tv_area_size">357,386 km\u00B2</string>
    <string name="co_tv_population">Population:&#160;&#160;</string>
    <string name="co_tv_population_size">83,000,000</string>
    <string name="co_tv_currency">Currency:&#160;&#160;</string>
    <string name="co_tv_currency_value">Euro (€) (EUR)</string>
    <string name="co_tv_time_zone">Time zone:&#160;&#160;</string>
    <string name="co_tv_time_zone_value">UTC+1</string>
    <string name="co_tv_calling_code">Calling code:&#160;&#160;</string>
    <string name="co_tv_calling_code_value">+49</string>
    <string name="co_tv_country_code">Country code:&#160;&#160;</string>
    <string name="co_tv_country_code_values">DE</string>
    <string name="ftl_empty_list">Not yet decided where to go :(</string>
    <!-- Travel -->

</resources>
