<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvNewFeatureCountDown"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nfcc_height"
    android:layout_margin="@dimen/category_card_margin"
    android:elevation="@dimen/nfcc_card_elevation"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone"
    tools:visibility="visible"
    card_view:cardBackgroundColor="@color/colorPrimary"
    card_view:cardCornerRadius="@dimen/card_view_corner_radius">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvNewFeatureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfcc_title_sample"
            android:textStyle="bold"
            android:textColor="@color/new_feature_text"
            android:textSize="@dimen/category_card_title_size"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfcc_coming_soon"
            android:textStyle="bold"
            android:textColor="@color/new_feature_text"
            android:textSize="@dimen/category_card_title_size"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvNewFeatureTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvTimerDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/nfcc_tv_days_margin_end"
            android:textColor="@color/new_feature_text"
            android:textStyle="bold"
            android:textSize="@dimen/nfcc_tv_timer_size"
            android:text="@string/nfcc_tv_days_unit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTimerHours"/>

        <TextView
            android:id="@+id/tvTimerHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/nfcc_tv_hours_margin_end"
            android:textColor="@color/new_feature_text"
            android:textStyle="bold"
            android:textSize="@dimen/nfcc_tv_timer_size"
            android:text="@string/nfcc_tv_hours_unit"
            app:layout_constraintEnd_toStartOf="@id/guidelineTimerTitles"
            app:layout_constraintTop_toTopOf="@id/tvTimerDays"/>

        <TextView
            android:id="@+id/tvTimerMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nfcc_tv_minutes_margin_start"
            android:textColor="@color/new_feature_text"
            android:textStyle="bold"
            android:textSize="@dimen/nfcc_tv_timer_size"
            android:text="@string/nfcc_tv_minutes_unit"
            app:layout_constraintStart_toEndOf="@id/guidelineTimerTitles"
            app:layout_constraintTop_toTopOf="@id/tvTimerDays"/>

        <TextView
            android:id="@+id/tvTimerSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nfcc_tv_seconds_margin_start"
            android:textColor="@color/new_feature_text"
            android:textStyle="bold"
            android:textSize="@dimen/nfcc_tv_timer_size"
            android:text="@string/nfcc_tv_seconds_unit"
            app:layout_constraintTop_toTopOf="@id/tvTimerDays"
            app:layout_constraintStart_toEndOf="@id/tvTimerMinutes" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineTimerTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical" />

        <cn.iwgang.countdownview.CountdownView
            android:id="@+id/countDownNewFeature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/nfcc_countdown_padding"
            app:isHideTimeBackground="true"
            app:isShowDay="true"
            app:isShowHour="true"
            app:isShowMinute="true"
            app:isShowSecond="true"
            app:timeTextColor="@color/new_feature_text"
            app:timeTextSize="@dimen/nfcc_countdown_text_size"
            app:isTimeTextBold="true"
            app:suffixGravity="bottom"
            app:suffixTextColor="@color/new_feature_text"
            app:suffixTextSize="@dimen/nfcc_countdown_suffix_size"
            app:suffixDay=" "
            app:suffixHour=" "
            app:suffixMinute=" "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTimerDays" />

        <ImageView
            android:id="@+id/ivLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nfcc_lock_margin_top"
            app:srcCompat="@drawable/ic_lock"
            app:layout_constraintTop_toBottomOf="@id/countDownNewFeature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <nl.dionsegijn.konfetti.KonfettiView
            android:id="@+id/kvFeatureAvailable"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>